--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.FastFood"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.checkoutactivity.CheckOutActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.detailactivity.DetailActivity"
             android:exported="false" />
         <activity
