login register using firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,7 @@
         android:theme="@style/Theme.FastFood"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.checkoutactivity.CheckOutActivity"
-            android:exported="false" />
-        <activity
-            android:name=".presentation.detailactivity.DetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".presentation.main.MainActivity"
+            android:name=".presentation.auth.splashscreen.SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,6 +23,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".presentation.auth.register.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.auth.login.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.checkoutactivity.CheckOutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.detailactivity.DetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.main.MainActivity"
+            android:exported="true"/>
+
+
+
     </application>
 
 </manifest>
